Fixed font-size for textarea on mobile

--- a/src/components/FeedbackForm/feedback-form.scss
+++ b/src/components/FeedbackForm/feedback-form.scss
@@ -42,7 +42,7 @@ $feedback-form__color--required: #ff0000;
             height: 9em;
             width: 100%;
             padding: 6px 12px;
-            font-size: 1.2em;
+            font-size: 1em;
             line-height: 1.4;
             background-color: #fff;
             border: 1px solid #D1D1D1;
